fixed colors schemas on mobile menu

--- a/frontend/src/app/shared/footer/footer.component.scss
+++ b/frontend/src/app/shared/footer/footer.component.scss
@@ -1,6 +1,5 @@
-:host,
-a {
-  color: #ebedf4;
+:host, a {
+  color: #EBEDF4;
   font-size: 16px;
   font-style: normal;
   &.social {
@@ -9,16 +8,13 @@ a {
 }
 .footer {
   height: 175px;
-  background-color: #31394d;
+  background-color: #31394D;
   text-align: center;
   padding-top: 44px;
   margin-top: 40px;
-  margin-left: -60px;
-  margin-right: -60px;
-  z-index: -1;
 
-  &.footer-dark {
-    background-color: #0e1521;
+  &.footer-dark{
+    background-color: #0E1521;
   }
 }
 
@@ -48,13 +44,13 @@ a {
 .tooltip .tooltiptext {
   visibility: hidden;
   width: 310px;
-  color: #748aa1;
-  font-size: 14px;
+  color: #748AA1;
+  font-size: 14px;  
   height: auto;
   text-align: center;
-
+  
   text-align: center;
-  background: #ffffff;
+  background: #FFFFFF;
   box-shadow: 0px 6px 30px rgba(0, 0, 0, 0.16);
   border-radius: 4px;
   padding: 5px 0;
