--- a/frontend/src/app/shared/header/header.component.scss
+++ b/frontend/src/app/shared/header/header.component.scss
@@ -174,11 +174,8 @@
   // }
 }
 
-@media screen and (min-width: 769px) {
-  .logo {
-    width: 100%;
-    left: -60px;
-    right: -60px;
-    padding: 0 60px;
-  }
-}
+// @media screen and (min-width: 1920px) {
+//   .logo {
+//     padding: 0 210px;
+//   }
+// }
